<resources>
    <string name="app_name">GADS Leaderboard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="project_submission">Project Submission</string>
    <string name="last_name">Last Name</string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="project_on_github">Project on GITHUB (link)</string>
    <string name="leaderboard">LEADERBOARD</string>
    <string name="are_you_sure">Are you sure</string>
</resources>