<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".Activity.Submit">

    <ImageButton
        android:id="@+id/submit_back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/submit_image_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/submit_image_view"
        app:srcCompat="@drawable/back_arrow" />

    <ImageView
        android:id="@+id/submit_image_view"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/submit_back_arrow"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/splash_screen_img" />

    <TextView
        android:id="@+id/submit_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/project_submission"
        android:textColor="@color/brownish_yellow"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_image_view" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2.5dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/gradient_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_text_view" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/submit_first_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="100dp"
                android:background="@drawable/edit_text_background"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName|textCapWords"
                android:padding="15dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimary"
                app:layout_constraintEnd_toStartOf="@+id/submit_last_name"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/submit_last_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/edit_text_background"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/submit_first_name"
                app:layout_constraintTop_toTopOf="@+id/submit_first_name" />

            <EditText
                android:id="@+id/submit_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:background="@drawable/edit_text_background"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="@+id/submit_last_name"
                app:layout_constraintStart_toStartOf="@+id/submit_first_name"
                app:layout_constraintTop_toBottomOf="@+id/submit_first_name" />

            <EditText
                android:id="@+id/submit_project_link"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:background="@drawable/edit_text_background"
                android:ems="10"
                android:hint="@string/project_on_github"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="@+id/submit_email"
                app:layout_constraintStart_toStartOf="@+id/submit_email"
                app:layout_constraintTop_toBottomOf="@+id/submit_email" />

            <Button
                android:id="@+id/submit_btn"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="70dp"
                android:background="@drawable/button_background"
                android:elevation="8dp"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:elevation="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/submit_project_link" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>